<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout android:layout_margin="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/signup"
        android:textSize="@dimen/_30sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_label"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            app:errorTextColor="@color/white"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_identity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_txt_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextColor="@color/white"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="13"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_txt_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorEnabled="true"
            app:errorTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextColor="@color/white"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/txtAlreadyAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/already_have_account" />

    </LinearLayout>
  <include layout="@layout/dialog_loading_view"></include>

</RelativeLayout>
</ScrollView>